--- a/force-app/main/default/classes/CanTheUser.cls
+++ b/force-app/main/default/classes/CanTheUser.cls
@@ -49,7 +49,7 @@ public with sharing class CanTheUser {
      * @param permission create, read, update or delete
      * @return Boolean
      * @example
-     * System.debug(new CanTheUser().crud(new Account(), CanTheUser.CrudType.READ));
+     * System.debug(CanTheUser.crud(new Account(), CanTheUser.CrudType.READ));
      **/
     public static Boolean crud(SObject obj, CrudType permission) {
         switch on permission {
@@ -76,7 +76,7 @@ public with sharing class CanTheUser {
         }
     }
 
-    public static Boolean crud(List<SObject> objs, CrudType permission) {
+	public static Boolean crud(List<SObject> objs, CrudType permission) {
         return crud(objs?.get(0), permission);
     }
 
@@ -86,7 +86,7 @@ public with sharing class CanTheUser {
      * @param obj Object type to check create permissions on
      * @return Boolean
      * @example
-     * System.debug(new CanTheUser().create(new Account()));
+     * System.debug(CanTheUser.create(new Account()));
      **/
     public static Boolean create(SObject obj) {
         return crud(obj, CrudType.CREATE);
@@ -109,7 +109,7 @@ public with sharing class CanTheUser {
      * @param obj object type to check read permissions on
      * @return Boolean
      * @example
-     * System.debug(new CanTheUser().read(new Account()));
+     * System.debug(CanTheUser.read(new Account()));
      **/
     public static Boolean read(SObject obj) {
         return crud(obj, CrudType.READ);
@@ -132,7 +132,7 @@ public with sharing class CanTheUser {
      * @param obj object type to check edit permissions on
      * @return Boolean
      * @example
-     * System.debug(new CanTheUser().edit(new Account()));
+     * System.debug(CanTheUser.edit(new Account()));
      **/
     public static Boolean edit(SObject obj) {
         return crud(obj, CrudType.EDIT);
@@ -155,6 +155,7 @@ public with sharing class CanTheUser {
      * @param obj object type to check edit permissions on
      * @return Boolean
      * @example
+	 * System.debug(CanTheUser.ups(new Account()));
      **/
     public static Boolean ups(SObject obj) {
         return crud(obj, CrudType.UPS);
@@ -170,7 +171,7 @@ public with sharing class CanTheUser {
      * @param obj object type to check destroy permissions on
      * @return Boolean
      * @example
-     * System.debug(new CanTheUser().destroy(new Account()));
+     * System.debug(CanTheUser.destroy(new Account()));
      **/
     public static Boolean destroy(SObject obj) {
         return crud(obj, CrudType.DEL);
@@ -187,7 +188,7 @@ public with sharing class CanTheUser {
      * @param field the field in question in SObjectField form
      * @return Boolean
      * @example
-     * System.debug(new CanTheUser().flsAccessible('Account', 'Name'));
+     * System.debug(CanTheUser.flsAccessible('Account', 'Name'));
      **/
     public static Boolean flsAccessible(String obj, String field) {
         return getFLSForFieldOnObject(obj, field, FLSType.ACCESSIBLE);
@@ -200,7 +201,7 @@ public with sharing class CanTheUser {
      * @return      `Map<String, Boolean>`
      * @example
      * String[] fields = new String[]{'Name', 'ShippingStreet'};
-     * System.debug(new CanTheUser().bulkFLSAccessible('Account', fields));
+     * System.debug(CanTheUser.bulkFLSAccessible('Account', fields));
      */
     public static Map<String, Boolean> bulkFLSAccessible(
         String obj,
@@ -220,7 +221,7 @@ public with sharing class CanTheUser {
      * @param field the field to check
      * @return Boolean
      * @example
-     * System.debug(new CanTheUser().flsUpdatable('Account', 'Name'));
+     * System.debug(CanTheUser.flsUpdatable('Account', 'Name'));
      **/
     public static Boolean flsUpdatable(String obj, String field) {
         return getFLSForFieldOnObject(obj, field, FLSType.UPDATABLE);
@@ -233,7 +234,7 @@ public with sharing class CanTheUser {
      * @return      `Map<String, Boolean>`
      * @example
      * String[] fields = new String[]{'Name', 'ShippingStreet'};
-     * System.debug(new CanTheUser().bulkFLSUpdatable('Account', fields));
+     * System.debug(CanTheUser.bulkFLSUpdatable('Account', fields));
      */
     public static Map<String, Boolean> bulkFLSUpdatable(
         String obj,
