--- a/force-app/main/default/tests/CanTheUser_Tests.cls
+++ b/force-app/main/default/tests/CanTheUser_Tests.cls
@@ -1,4 +1,4 @@
-@isTest
+@IsTest
 private class CanTheUser_Tests {
     // These tests rely on the assumption that standard FLS/CRUD have not been modified
     // by the user, and use the Account Object for verification of the Can Logic.
@@ -11,7 +11,7 @@ private class CanTheUser_Tests {
         return accounts;
     }
 
-    @isTest
+    @IsTest
     static void canCrudAccountCreatePositive() {
         System.assert(
             CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.CREATE),
@@ -23,7 +23,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudCreateAccountPositive() {
         System.assert(
             CanTheUser.create(generateAccounts()),
@@ -35,7 +35,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudAccountReadPositive() {
         System.assert(
             CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.READ),
@@ -47,7 +47,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudReadAccountPositive() {
         System.assert(
             CanTheUser.read(generateAccounts()),
@@ -59,7 +59,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudAccountUpdatePositive() {
         System.assert(
             CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.EDIT),
@@ -71,7 +71,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudEditAccountPositive() {
         System.assert(
             CanTheUser.edit(generateAccounts()),
@@ -83,7 +83,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudUpsertAccountPositive() {
         System.assert(
             CanTheUser.ups(generateAccounts()),
@@ -95,7 +95,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudAccountDeletePositive() {
         System.assert(
             CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.DEL),
@@ -107,7 +107,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void canCrudDestroyAccountPositive() {
         System.assert(
             CanTheUser.destroy(generateAccounts()),
@@ -119,7 +119,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void getFLSofAccountNamePositive() {
         System.assert(
             CanTheUser.flsAccessible('Account', 'Name'),
@@ -127,7 +127,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void getFLSofAccountIDNegative() {
         System.assert(
             CanTheUser.flsUpdatable('Account', 'id') == false,
@@ -135,7 +135,7 @@ private class CanTheUser_Tests {
         );
     }
 
-    @isTest
+    @IsTest
     static void getBulkFLSAccessibleWithAccountPositive() {
         Set<String> fields = new Set<String>{ 'name', 'id' };
         Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSAccessible(
@@ -145,12 +145,12 @@ private class CanTheUser_Tests {
         for (String field : bulkCheck.keySet()) {
             System.assert(
                 bulkCheck.get(field),
-                'Expected the field to be accesible on Account'
+                'Expected the field ' + field + ' to be accesible on Account'
             );
         }
     }
 
-    @isTest
+    @IsTest
     static void getBulkFLSAccessibleWithAccountPositiveWithNegativeResults() {
         Set<String> fields = new Set<String>{ 'name', 'nonExistingField__c' };
         Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSAccessible(
@@ -165,11 +165,11 @@ private class CanTheUser_Tests {
 
         System.assert(
             !bulkCheck.get('nonExistingField__c'),
-            'Expected the name ' + 'field to be accesible on Account'
+            'Expected the nonExistingField__c ' + 'field not to be accesible on Account'
         );
     }
 
-    @isTest
+    @IsTest
     static void getBulkFLSUpdatableWithAccountPositive() {
         Set<String> fields = new Set<String>{ 'name', 'ShippingStreet' };
         Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSUpdatable(
@@ -179,12 +179,12 @@ private class CanTheUser_Tests {
         for (String field : bulkCheck.keySet()) {
             System.assert(
                 bulkCheck.get(field),
-                'Expected the field to be accesible on Account'
+                'Expected the field ' + field + ' to be accesible on Account'
             );
         }
     }
 
-    @isTest
+    @IsTest
     static void getBulkFLSUpdatableWithAccountPositiveWithNegativeResults() {
         Set<String> fields = new Set<String>{ 'name', 'nonExistingField__c' };
         Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSUpdatable(
@@ -199,7 +199,7 @@ private class CanTheUser_Tests {
 
         System.assert(
             !bulkCheck.get('nonExistingField__c'),
-            'Expected the name ' + 'field to be accesible on Account'
+            'Expected the nonExistingField__c ' + 'field not to be accesible on Account'
         );
     }
 }
