Assert all tests!

--- a/force-app/main/default/tests/Safely_Tests.cls
+++ b/force-app/main/default/tests/Safely_Tests.cls
@@ -391,11 +391,15 @@ private class Safely_Tests {
 	static void emptyCollections(){
 
 		Test.startTest();
-		new Safely().doInsert(new List<Account>());
-		new Safely().doUpdate(new List<Account>());
-		new Safely().doUpsert(new List<Account>());
-		new Safely().doDelete(new List<Account>());
+		List<Database.SaveResult> insertResults = new Safely().doInsert(new List<Account>());
+		List<Database.SaveResult> updateResults = new Safely().doUpdate(new List<Account>());
+		List<Database.UpsertResult> upsertResults = new Safely().doUpsert(new List<Account>());
+		List<Database.DeleteResult> deleteResults = new Safely().doDelete(new List<Account>());
 		Test.stopTest();
 
+		System.assert(insertResults.isEmpty());
+		System.assert(updateResults.isEmpty());
+		System.assert(upsertResults.isEmpty());
+		System.assert(deleteResults.isEmpty());
 	}
 }
